[package]
name = "rust_cad_geometry"
version = "0.1.0"
authors = ["Emilio Wuerges <wuerges@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
typed-arena = "1.7.0"
simplesvg = "0.4.0"

[dev-dependencies]
rand = "0.7"
quickcheck = "0.8"
quickcheck_macros = "0.8"
